--- a/src/MessageSilo.Client/Layout/NavMenu.razor
+++ b/src/MessageSilo.Client/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Message Silo</a>
+        <Image Source="/img/logo.png"></Image><a class="navbar-brand" href="">Message Silo</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
