--- a/src/MessageSilo.Client/_Imports.razor
+++ b/src/MessageSilo.Client/_Imports.razor
@@ -8,5 +8,6 @@
 @using Microsoft.JSInterop
 @using MessageSilo.Client
 @using MessageSilo.Client.Layout
+@using MessageSilo.Client.Helpers
 
 @using Blazorise
