--- a/src/MessageSilo.Client/wwwroot/css/app.css
+++ b/src/MessageSilo.Client/wwwroot/css/app.css
@@ -17,7 +17,7 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
@@ -108,6 +108,11 @@ code {
 }
 
 .widget-container {
+    display: flex;
+}
+
+
+.widget-content {
     width: 200px;
     max-height: 41px;
     border-radius: 10px;
@@ -119,6 +124,25 @@ code {
     overflow: hidden;
     background: white;
 }
+
+.send-container {
+    margin-left: 5px;
+    width: 41px;
+    max-height: 41px;
+    border-radius: 10px;
+    outline: 1px solid black;
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    overflow: hidden;
+    background: white;
+    cursor: pointer;
+}
+
+    .send-container i {
+        align-content: center;
+    }
 
 .icon-container {
     height: 100%;
@@ -133,6 +157,10 @@ code {
     padding-left: 10px;
     display: flex;
     align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
 }
 
 g.diagram-link path:not(.selection-helper) {
