--- a/src/MessageSilo.Client/Pages/Manager.razor
+++ b/src/MessageSilo.Client/Pages/Manager.razor
@@ -48,7 +48,7 @@
 <Row>
     <Column>
         <FileEdit Changed="@OnFileEditChanged" />
-        <MemoEdit Rows="20" Class="mt-5" @bind-Text="@fileContent" Placeholder="Define your Entities here..." />
+        <MemoEdit Rows="20" Class="mt-5" @bind-Text="@fileContent" Placeholder="Define your Entities here in YAML..." />
         <Button Color="Color.Primary" Class="mt-5" Clicked="@OnApply">Apply</Button>
     </Column>
     <Column>
@@ -65,6 +65,26 @@
     </Column>
 </Row>
 
+<Modal @bind-Visible="sendModalVisible">
+    <ModalContent Centered>
+        <ModalHeader>
+            <ModalTitle>
+                Send a message to <strong>@selectedConnection?.Name</strong>
+            </ModalTitle>
+            <CloseButton />
+        </ModalHeader>
+        <ModalBody>
+            <Field>
+                <FieldLabel>Message body</FieldLabel>
+                <MemoEdit Rows="5" Class="mt-5" Placeholder="Enter message..." @bind-Text="messageBody" />
+            </Field>
+        </ModalBody>
+        <ModalFooter>
+            <Button Color="Color.Primary" Clicked="@Send">Send</Button>
+        </ModalFooter>
+    </ModalContent>
+</Modal>
+
 @code {
     private bool alertVisible = false;
 
@@ -76,6 +96,12 @@
 
     private BlazorDiagram diagram = null!;
 
+    private ConnectionSettingsDTO? selectedConnection;
+
+    private bool sendModalVisible = false;
+
+    private string? messageBody;
+
     protected override async Task OnInitializedAsync()
     {
         diagram = new BlazorDiagram();
@@ -84,6 +110,27 @@
         diagram.RegisterComponent<TargetNode, TargetWidget>();
 
         await ReloadEntities();
+    }
+
+    private Task ShowSendModal(ConnectionSettingsDTO dto)
+    {
+        Console.WriteLine("yyyyyyyy");
+        selectedConnection = dto;
+        sendModalVisible = true;
+        this.StateHasChanged();
+
+        return Task.CompletedTask;
+    }
+
+    private async Task Send()
+    {
+        await api.Send(selectedConnection!.Name, new MessageDTO()
+            {
+                Body = messageBody!
+            });
+
+        sendModalVisible = false;
+        selectedConnection = null;
     }
 
     private async Task OnApply()
@@ -151,7 +198,7 @@
         {
             var dto = yamlConverterService.Deserialize<ConnectionSettingsDTO>(entity.YamlDefinition);
 
-            diagram.Nodes.Add(new ConnectionNode(dto, entity.Name)
+            diagram.Nodes.Add(new ConnectionNode(dto, entity.Name, ShowSendModal)
                 {
                     Title = entity.Name
                 });
@@ -173,7 +220,6 @@
                 await file.WriteToStreamAsync(stream);
 
                 stream.Seek(0, SeekOrigin.Begin);
-
 
                 var reader = new StreamReader(stream);
 
