--- a/src/MessageSilo.Client/Layout/NavMenu.razor
+++ b/src/MessageSilo.Client/Layout/NavMenu.razor
@@ -1,29 +1,18 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <Image Source="/img/logo.png"></Image><a class="navbar-brand" href="">Message Silo</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+﻿<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#"><img src="https://www.message-silo.dev/img/logo.png" alt="Message Silo Logo" style="height: 40px; margin-right: 10px;">Message Silo</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <Icon Name="IconName.List" class="fa-fw" />  Manager
-            </NavLink>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/MessageSilo/MessageSilo/wiki/01.-Getting-Started">Getting Started</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/MessageSilo/MessageSilo">GitHub</a>
+                </li>
+            </ul>
         </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+    </div>
+</nav>
