--- a/src/MessageSilo.Client/Pages/Manager.razor
+++ b/src/MessageSilo.Client/Pages/Manager.razor
@@ -154,7 +154,7 @@
         foreach (var config in content.Where(p => p.Contains($"kind: {EntityKind.Connection}")))
         {
             var parsed = yamlConverterService.Deserialize<ConnectionSettingsDTO>(config);
-            parsed.TargetKind = dto.Targets.Any(p => p.Id == parsed.TargetId) ? EntityKind.Target : EntityKind.Connection;
+            parsed.TargetEntity = dto.Targets.FirstOrDefault(p => p.Id == parsed.TargetId);
             dto.Connections.Add(parsed);
         }
 
